<resources>
    <string name="app_name">KFeedreader</string>
    <string name="title">Título</string>
    <string name="actor">Autor</string>
    <string name="date_pub">Data Pub</string>
    <string name="see_more">Ver mais</string>
    <string name="add">adicionar</string>
    <string name="exit">Sair</string>
    <string name="description">Descrição</string>
    <string name="refresh">Atualizar</string>
    <string name="loading">Carregando...</string>
    <string name="see_article_on_website">Ver artigo no site</string>
</resources>
